--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -1,2 +1,19 @@
-node_modules
+.env
+.env.*
+node_modules/
+dist/
+build/
+.cache/
+.tmp/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 *.log
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+coverage/
+
+
