--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   mongo:
-    image: mongo:5
+    image: mongo:50
     container_name: mymoney-mongo
-    restart: unless-stopped
+    restart: always
     ports:
       - "${DATABASE_PORT}:27017"
     volumes:
@@ -13,7 +13,7 @@ services:
       context: ./api
       dockerfile: Dockerfile
     container_name: api
-    restart: unless-stopped
+    restart: always
     ports:
       - "${API_PORT}:3003"
     environment:
@@ -28,7 +28,7 @@ services:
       context: ./ui
       dockerfile: Dockerfile
     container_name: ui
-    restart: unless-stopped
+    restart: always
     ports:
       - "${UI_PORT}:8080"
     environment:
